--- a/BMI_HTML.html
+++ b/BMI_HTML.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>BMI Calculator</title>
-    <link rel="stylesheet" href="C:\Users\ADMIN\Documents\BMI\BMI_CSS.css" />
+    <link rel="stylesheet" href="C:/Users/ADMIN/Documents/BMI/BMI_CSS.css" />
   </head>
 
   <body>
@@ -18,6 +18,6 @@
 
       <p id="Output"></p>
     </div>
-    <script src="C:\Users\ADMIN\Documents\BMI\BMI_JS.js"></script>
+    <script src="C:/Users/ADMIN/Documents/BMI/BMI_JS.js"></script>
   </body>
 </html>
